--- a/analysis/multi_tissue_ldmerge_enriched_pwy.Rmd
+++ b/analysis/multi_tissue_ldmerge_enriched_pwy.Rmd
@@ -20,7 +20,7 @@ The explanatory variable X indicate if the gene is part of a specific pathway. X
 
 ## Susie
 
-The response variable Y is the outcome of MAGMA (z-score of each gene).
+The response variable Y is the outcome of MAGMA (z-scores of the genes with susie pip > 0.8).
 
 The explanatory variable X is the same with logistic susie
 
@@ -56,7 +56,7 @@ create_pip_datatable <- function(linear_fit) {
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/aFib-ebi-a-GCST006414_cutoff08_gobp.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/aFib-ebi-a-GCST006414_cutoff08_gobp.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -64,6 +64,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
+
 create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
@@ -73,7 +74,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/aFib-ebi-a-GCST006414_cutoff08_gocc.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/aFib-ebi-a-GCST006414_cutoff08_gocc.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -90,7 +91,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/aFib-ebi-a-GCST006414_cutoff08_gocc.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/aFib-ebi-a-GCST006414_cutoff08_gocc.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -106,7 +107,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/aFib-ebi-a-GCST006414_cutoff08_kegg.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/aFib-ebi-a-GCST006414_cutoff08_kegg.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -125,7 +126,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/IBD-ebi-a-GCST004131_cutoff08_gobp.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/IBD-ebi-a-GCST004131_cutoff08_gobp.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -142,7 +143,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/IBD-ebi-a-GCST004131_cutoff08_gocc.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/IBD-ebi-a-GCST004131_cutoff08_gocc.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -159,7 +160,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/IBD-ebi-a-GCST004131_cutoff08_gocc.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/IBD-ebi-a-GCST004131_cutoff08_gocc.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -175,7 +176,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/IBD-ebi-a-GCST004131_cutoff08_kegg.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/IBD-ebi-a-GCST004131_cutoff08_kegg.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -195,7 +196,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/LDL-ukb-d-30780_irnt_cutoff08_gobp.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/LDL-ukb-d-30780_irnt_cutoff08_gobp.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -212,7 +213,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/LDL-ukb-d-30780_irnt_cutoff08_gocc.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/LDL-ukb-d-30780_irnt_cutoff08_gocc.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -229,7 +230,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/LDL-ukb-d-30780_irnt_cutoff08_gocc.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/LDL-ukb-d-30780_irnt_cutoff08_gocc.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -245,7 +246,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/LDL-ukb-d-30780_irnt_cutoff08_kegg.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/LDL-ukb-d-30780_irnt_cutoff08_kegg.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -265,7 +266,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/SBP-ukb-a-360_cutoff08_gobp.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/SBP-ukb-a-360_cutoff08_gobp.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -282,7 +283,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/SBP-ukb-a-360_cutoff08_gocc.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/SBP-ukb-a-360_cutoff08_gocc.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -299,7 +300,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/SBP-ukb-a-360_cutoff08_gocc.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/SBP-ukb-a-360_cutoff08_gocc.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -315,7 +316,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/SBP-ukb-a-360_cutoff08_kegg.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/SBP-ukb-a-360_cutoff08_kegg.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -335,7 +336,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/SCZ-ieu-b-5102_cutoff08_gobp.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/SCZ-ieu-b-5102_cutoff08_gobp.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -352,7 +353,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/SCZ-ieu-b-5102_cutoff08_gocc.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/SCZ-ieu-b-5102_cutoff08_gocc.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -369,7 +370,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/SCZ-ieu-b-5102_cutoff08_gocc.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/SCZ-ieu-b-5102_cutoff08_gocc.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -385,7 +386,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/SCZ-ieu-b-5102_cutoff08_kegg.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/SCZ-ieu-b-5102_cutoff08_kegg.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -405,7 +406,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/WBC-ieu-b-30_cutoff08_gobp.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/WBC-ieu-b-30_cutoff08_gobp.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -422,7 +423,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/WBC-ieu-b-30_cutoff08_gocc.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/WBC-ieu-b-30_cutoff08_gocc.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -439,7 +440,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/WBC-ieu-b-30_cutoff08_gocc.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/WBC-ieu-b-30_cutoff08_gocc.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
@@ -455,7 +456,7 @@ create_pip_datatable(linear_fit = linear.fit.subset)
 ### Logistice Susie
 
 ```{r warning=F,message=FALSE}
-load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie/WBC-ieu-b-30_cutoff08_kegg.rdata")
+load("/project/xinhe/xsun/ctwas/4.multi_tissue_process/results/susie_old/WBC-ieu-b-30_cutoff08_kegg.rdata")
 gseasusie::enrichment_volcano(logistic.fit, ora)
 gseasusie::interactive_table(logistic.fit, ora)
 ```
