--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -22,6 +22,7 @@ editor_options:
 
   * [Deciding the matching tissue](https://sq-96.github.io/multigroup_ctwas_analysis/matching_tissue.html)
   * [Multi-tissue analysis, merging the LD blocks](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue_ldmerge.html)
+  * [Validation](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue_ldmerge_validation.html)
   * [Enrichment analysis -- enriched pathways](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue_ldmerge_enriched_pwy.html)
   * LDL ten tissues analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_ten_tissues.html)
 
